argo/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-load
  namespace: kpop
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spring-boot-load
  template:
    metadata:
      labels:
        app: spring-boot-load
    spec:
      containers:
        - name: spring-boot-load
          image: 553186839963.dkr.ecr.ap-northeast-2.amazonaws.com/drogva:page
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 1
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
      imagePullSecrets:
        - name: ecr-registry-secret
