argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: kpop
spec:
  selector:
    app: spring-boot-load
  ports:
    - port: 8080
      targetPort: 8080
